--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form>
         <p>Usuario:<input type="text" id="usuario"></p>
         <p>Contraseña:</p>
-        <input type="password" id="clave">
+        <input type="password" id="claves">
         <input type="button" value="Confirmar" onClick="convertir()">     
     </form>
     <script src="login.js"></script>
