--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,7 +8,7 @@
     <!--PARA LEER LOS DATOS DE EXCEL en html-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!--<script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>-->
-    <link rel="stylesheet" href="../code/css/code.scss">
+    <link rel="stylesheet" href="../code/css/code.css">
     <title>Document</title>
 </head>
 <body>
