--- a/dashboard/menu_lateral/antropometria/index.html
+++ b/dashboard/menu_lateral/antropometria/index.html
@@ -10,20 +10,20 @@
 <body>
     <div class="content__antrop">
         <div class="datos">
-            <div class="dni">
+            <div class="datos-child dni">
                 <label for="dni">Ingresar DNI</label>
                 <input type="number" id="dni" name="dni">
             </div>
-            <div class="act__fis">
+            <div class="datos-child act__fis">
                 <label for="actividad">Actividad física diara</label>
                 <input type="text" id="actividad" name="actividad">
             </div>
-            <div class="pab">
+            <div class="datos-child pab">
                 <label for="pab">Ingresar PAB</label>
                 <input type="number" name="pab" id="pab">
             </div>
             <div class="button">
-                <input type="button" class="btn__antrop" value="Resultado">
+                <button type="button" class="btn__antrop">Resultado</button>
             </div>
         </div>
         <div class="resultado">
