--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -17,7 +17,7 @@
             <img src="../src/img/logo Bexy Vergara PNG.png" alt="">
         </div>
         <div class="title">
-            <h1>LICENCIADA EN NUTRICION</h1>
+            <h3>LICENCIADA EN NUTRICION</h3>
         </div>
         <div class="login">
             <div class="login-usuario" id="usuario">
@@ -40,13 +40,8 @@
     </div>
     <div class="body">
         <div class="menu">
-            <!--<div class="buscar">
-                <svg xmlns="http://www.w3.org/2000/svg" id="buscar-icon" class="buscar-icon" fill="white" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><!--<path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-                <input type="text" id="buscar" placeholder="Buscar">
-
-            </div> //-->
             <div class="opciones">
-                <ul class="list">
+                <div class="list">
                     <li class="list__item">
                         <div class="list__button">
                             <a href="#" class="nav__link" onclick="XHRPOSTGENERAL('registro')">Opcion 1</a>
@@ -96,7 +91,7 @@
                             </li>
                         </ul>
                     </li>
-                </ul>
+                  </div>
             </div>
 
         </div>
