--- a/dashboard/menu_lateral/antropometria/index.html
+++ b/dashboard/menu_lateral/antropometria/index.html
@@ -10,20 +10,20 @@
 <body>
     <div class="content__antrop">
         <div class="datos">
-            <div class="datos-child dni">
+            <div class="datos__child dni">
                 <label for="dni">Ingresar DNI</label>
-                <input type="number" id="dni" name="dni">
+                <input type="number" id="dni" name="dni" class="datos__input">
             </div>
-            <div class="datos-child act__fis">
+            <div class="datos__child act__fis">
                 <label for="actividad">Actividad física diara</label>
-                <input type="text" id="actividad" name="actividad">
+                <input type="text" id="actividad" name="actividad" class="datos__input">
             </div>
-            <div class="datos-child pab">
+            <div class="datos__child pab">
                 <label for="pab">Ingresar PAB</label>
-                <input type="number" name="pab" id="pab">
+                <input type="number" name="pab" id="pab" class="datos__input">
             </div>
             <div class="button">
-                <button type="button" class="btn__antrop">Resultado</button>
+                <button type="button" class="btn__antrop">RESULTADO</button>
             </div>
         </div>
         <div class="resultado">
@@ -41,7 +41,7 @@
             </table>
         </div>
         <div class="guardar">
-            <input type="button" value="GUARDAR" id="ant__guardar" class="btn__guardar">
+            <button class="btn__guardar">GUARDAR</button>
         </div>
     </div>
 </body>
