css elias dashboard 4

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -57,13 +57,10 @@
                         </div>
                         <ul class="list__show">
                             <li class="list__inside">
-                                <a href="#" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('antropometria')">Opcion a</a>
+                                <a href="#" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('antropometria')">Antropometría</a>
                             </li>
                             <li class="list__inside">
                                 <a href="#" class="nav__link nav__link--inside">Opcion b</a>
-                            </li>
-                            <li class="list__inside">
-                                <a href="#" class="nav__link nav__link--inside">Opcion c</a>
                             </li>
                         </ul>
                     </li>
