--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -44,12 +44,12 @@
                 <div class="list">
                     <li class="list__item">
                         <div class="list__button">
-                            <a href="#" class="nav__link" onclick="XHRPOSTGENERAL('registro')">Opcion 1</a>
+                            <a href="#" class="nav__link" onclick="XHRPOSTGENERAL('registro')">Registro paciente</a>
                         </div>
                     </li>
                     <li class="list__item list__item--click">
                         <div class="list__button list__button--click" >
-                            <a href="#" class="nav__link" >Opcion 2</a>
+                            <a href="#" class="nav__link" >Tablas</a>
                             <div class="list__img">
                                 <img src="../src/svg/arrow.svg" alt="" class="list__arrow">
                             </div>
@@ -60,7 +60,7 @@
                                 <a href="#" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('antropometria')">Antropometría</a>
                             </li>
                             <li class="list__inside">
-                                <a href="#" class="nav__link nav__link--inside">Opcion b</a>
+                                <a href="#" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('inter_alimentos')">Intercambio alimentos</a>
                             </li>
                         </ul>
                     </li>
