--- a/dashboard/menu_lateral/antropometria/index.html
+++ b/dashboard/menu_lateral/antropometria/index.html
@@ -22,11 +22,11 @@
                 <label for="pab">Ingresar PAB</label>
                 <input type="number" name="pab" id="pab" class="datos__input">
             </div>
-            <div class="button">
-                <button type="button" class="btn__antrop">RESULTADO</button>
+            <div class="btn__res">
+                <button type="button" class="resultado">RESULTADO</button>
             </div>
         </div>
-        <div class="resultado">
+        <div class="tbl__resultado">
             <table>
                 <tr>
                     <th>IMC</th>
@@ -39,10 +39,11 @@
                     <td></td>
                 </tr>
             </table>
+            <div class="btn__guardar">
+                <button class="guardar">GUARDAR</button>
+            </div>
         </div>
-        <div class="guardar">
-            <button class="btn__guardar">GUARDAR</button>
-        </div>
+        
     </div>
 </body>
 </html>
