--- a/dashboard/menu_lateral/antropometria/index.html
+++ b/dashboard/menu_lateral/antropometria/index.html
@@ -12,15 +12,15 @@
         <div class="datos">
             <div class="datos__child dni">
                 <label for="dni">Ingresar DNI</label>
-                <input type="number" id="dni" name="dni" class="datos__input">
+                <input type="number" id="dni" name="dni" class="input">
             </div>
             <div class="datos__child act__fis">
                 <label for="actividad">Actividad física diara</label>
-                <input type="text" id="actividad" name="actividad" class="datos__input">
+                <input type="text" id="actividad" name="actividad" class="input">
             </div>
             <div class="datos__child pab">
                 <label for="pab">Ingresar PAB</label>
-                <input type="number" name="pab" id="pab" class="datos__input">
+                <input type="number" name="pab" id="pab" class="input">
             </div>
             <div class="btn__res">
                 <button type="button" class="resultado">RESULTADO</button>
@@ -38,6 +38,7 @@
                     <td></td>
                     <td></td>
                 </tr>
+                
             </table>
             <div class="btn__guardar">
                 <button class="guardar">GUARDAR</button>
