--- a/dashboard/menu_lateral/inter_alimentos/index.html
+++ b/dashboard/menu_lateral/inter_alimentos/index.html
@@ -14,8 +14,8 @@
         </div>
         <div class="datos__intal">
             <label for="dni" class="lbl__dni">Ingresar DNI</label>
-            <input type="number" id="dni" name="dni" class="inp__dni">
-            <input type="button" value="CARGAR DATOS" class="btn__cargar">
+            <input type="number" id="dni" name="dni" class="input">
+            <button class="cargar">CARGAR DATOS</button>
         </div>
         <div class="table__left">
             <table>
@@ -182,96 +182,96 @@
             <table>
                 <tr>
                     <td class="vacio"></td>
-                    <td>DESAYUNO</td>
-                    <td>MM</td>
-                    <td>ALMUERZO</td>
-                    <td>MT</td>
-                    <td>CENA</td> 
+                    <th>DESAYUNO</th>
+                    <th>MM</th>
+                    <th>ALMUERZO</th>
+                    <th>MT</th>
+                    <th>CENA</th> 
                 </tr>
                 <tr>
-                    <td>CEREALES Y DERIVADOS, TUBÉRCULOS y MENESTRAS</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>CEREALES Y DERIVADOS, TUBÉRCULOS y MENESTRAS</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>FRUTAS</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>FRUTAS</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>LACTEOS ENTERA</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>LACTEOS ENTERA</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>LACTEOS DESCREMADA</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>LACTEOS DESCREMADA</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>HORTALIZAS Y VERDURAS</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>HORTALIZAS Y VERDURAS</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>AZÚCARES</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>AZÚCARES</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>CARNE MAGRA</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>CARNE MAGRA</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>CARNE MEDIA MAGRA</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>CARNE MEDIA MAGRA</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>CARNE ALTA EN GRASA</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>CARNE ALTA EN GRASA</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>ALIMENTOS GRASOS</td>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>ALIMENTOS GRASOS</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </table>
         </div>
         <div class="guardar__ial">
-            <input type="button" value="GUARDAR DATOS" class="btn__guardar">
+            <button class="guardar">GUARDAR DATOS</button>
         </div>
     </div>
 </body>
