modificacion css 14 junio

--- a/dashboard/menu_lateral/antropometria/index.html
+++ b/dashboard/menu_lateral/antropometria/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../../code/css/antropometria.css">
+    <link rel="stylesheet" href="../../../code/css/code.css">
 </head>
 <body>
     <div class="content__antrop">
@@ -34,17 +35,17 @@
                     <th>GET</th>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><div>1</div></td>
+                    <td><div>1</div></td>
+                    <td><div>1</div></td>
                 </tr>
-                
+
             </table>
             <div class="btn__guardar">
                 <button class="guardar">GUARDAR</button>
             </div>
         </div>
-        
+
     </div>
 </body>
 </html>
