modificacion 15 de mayo segunda parte

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -49,6 +49,7 @@
                     </li>
                     <li class="list__item list__item--click">
                         <div class="list__button list__button--click" >
+                            <i class="fa-solid fa-table"></i>
                             <a href="#" class="nav__link" >Tablas</a>
                             <div class="list__img">
                                 <img src="../src/svg/arrow.svg" alt="" class="list__arrow">
