--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -43,8 +43,8 @@
             <div class="opciones">
                 <div class="list">
                     <li class="list__item">
-                        <div class="list__button">
-                            <a href="#" class="nav__link" onclick="XHRPOSTGENERAL('registro')">Registro paciente</a>
+                        <div class="list__button" onclick="XHRPOSTGENERAL('registro')">
+                            <a href="#" class="nav__link">Registro paciente</a>
                         </div>
                     </li>
                     <li class="list__item list__item--click">
