--- a/dashboard/menu_lateral/inter_alimentos/index.html
+++ b/dashboard/menu_lateral/inter_alimentos/index.html
@@ -95,7 +95,7 @@
                         TUBERCULOS Y
                         MENESTRAS
                     </th>
-                    <td></td>
+                    <td><input type="text" id="cereales"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -103,7 +103,7 @@
                 </tr>
                 <tr>
                     <th>FRUTAS</th>
-                    <td></td>
+                    <td><input type="text" id="frutas"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -111,7 +111,7 @@
                 </tr>
                 <tr>
                     <th>LACTEOS ENTERA</th>
-                    <td></td>
+                    <td><input type="text" id="lac_ent"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -119,7 +119,7 @@
                 </tr>
                 <tr>
                     <th>LACTEOS DESCREMADA</th>
-                    <td></td>
+                    <td><input type="text" id="lac_des"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -127,7 +127,7 @@
                 </tr>
                 <tr>
                     <th>HORTALIZAS Y VERDURAS</th>
-                    <td></td>
+                    <td><input type="text" id="hort"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -135,7 +135,7 @@
                 </tr>
                 <tr>
                     <th>AZÚCARES</th>
-                    <td></td>
+                    <td><input type="text" id="azucares"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -143,7 +143,7 @@
                 </tr>
                 <tr>
                     <th>CARNE MAGRA</th>
-                    <td></td>
+                    <td><input type="text" id="carne_m"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -151,7 +151,7 @@
                 </tr>
                 <tr>
                     <th>CARNE MEDIA MAGRA</th>
-                    <td></td>
+                    <td><input type="text" id="carne_mm"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -159,7 +159,7 @@
                 </tr>
                 <tr>
                     <th>CARNE ALTA EN GRASA</th>
-                    <td></td>
+                    <td><input type="text" id="carne_ag"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -167,7 +167,7 @@
                 </tr>
                 <tr>
                     <th>ALIMENTOS GRASOS</th>
-                    <td></td>
+                    <td><input type="text" id="ali_g"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -190,83 +190,83 @@
                 </tr>
                 <tr>
                     <th>CEREALES Y DERIVADOS, TUBÉRCULOS y MENESTRAS</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_cer"></td>
+                    <td><input type="text" id="tc_cer"></td>
+                    <td><input type="text" id="tc_cer"></td>
+                    <td><input type="text" id="tc_cer"></td>
+                    <td><input type="text" id="tc_cer"></td>
                 </tr>
                 <tr>
                     <th>FRUTAS</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_frutas"></td>
+                    <td><input type="text" id="tc_frutas"></td>
+                    <td><input type="text" id="tc_frutas"></td>
+                    <td><input type="text" id="tc_frutas"></td>
+                    <td><input type="text" id="tc_frutas"></td>
                 </tr>
                 <tr>
                     <th>LACTEOS ENTERA</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_lac_ent"></td>
+                    <td><input type="text" id="tc_lac_ent"></td>
+                    <td><input type="text" id="tc_lac_ent"></td>
+                    <td><input type="text" id="tc_lac_ent"></td>
+                    <td><input type="text" id="tc_lac_ent"></td>
                 </tr>
                 <tr>
                     <th>LACTEOS DESCREMADA</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_lac_desc"></td>
+                    <td><input type="text" id="tc_lac_desc"></td>
+                    <td><input type="text" id="tc_lac_desc"></td>
+                    <td><input type="text" id="tc_lac_desc"></td>
+                    <td><input type="text" id="tc_lac_desc"></td>
                 </tr>
                 <tr>
                     <th>HORTALIZAS Y VERDURAS</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_hort"></td>
+                    <td><input type="text" id="tc_hort"></td>
+                    <td><input type="text" id="tc_hort"></td>
+                    <td><input type="text" id="tc_hort"></td>
+                    <td><input type="text" id="tc_hort"></td>
                 </tr>
                 <tr>
                     <th>AZÚCARES</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_azucares"></td>
+                    <td><input type="text" id="tc_azucares"></td>
+                    <td><input type="text" id="tc_azucares"></td>
+                    <td><input type="text" id="tc_azucares"></td>
+                    <td><input type="text" id="tc_azucares"></td>
                 </tr>
                 <tr>
                     <th>CARNE MAGRA</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_carne_m"></td>
+                    <td><input type="text" id="tc_carne_m"></td>
+                    <td><input type="text" id="tc_carne_m"></td>
+                    <td><input type="text" id="tc_carne_m"></td>
+                    <td><input type="text" id="tc_carne_m"></td>
                 </tr>
                 <tr>
                     <th>CARNE MEDIA MAGRA</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_carne_mm"></td>
+                    <td><input type="text" id="tc_carne_mm"></td>
+                    <td><input type="text" id="tc_carne_mm"></td>
+                    <td><input type="text" id="tc_carne_mm"></td>
+                    <td><input type="text" id="tc_carne_mm"></td>
                 </tr>
                 <tr>
                     <th>CARNE ALTA EN GRASA</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_carne_ag"></td>
+                    <td><input type="text" id="tc_carne_ag"></td>
+                    <td><input type="text" id="tc_carne_ag"></td>
+                    <td><input type="text" id="tc_carne_ag"></td>
+                    <td><input type="text" id="tc_carne_ag"></td>
                 </tr>
                 <tr>
                     <th>ALIMENTOS GRASOS</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="text" id="tc_ag"></td>
+                    <td><input type="text" id="tc_ag"></td>
+                    <td><input type="text" id="tc_ag"></td>
+                    <td><input type="text" id="tc_ag"></td>
+                    <td><input type="text" id="tc_ag"></td>
                 </tr>
             </table>
         </div>
