primera modificacion del 23/06/2023

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -44,7 +44,7 @@
                 <div class="list">
                     <li class="list__item">
                         <div class="list__button" onclick="XHRPOSTGENERAL('registro')">
-                            <a href="#" class="nav__link">Registro paciente</a>
+                            <a href="#intercambio" class="nav__link">Registro paciente</a>
                         </div>
                     </li>
                     <li class="list__item list__item--click">
@@ -58,7 +58,7 @@
                         </div>
                         <ul class="list__show">
                             <li class="list__inside">
-                                <a href="#" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('antropometria')">Antropometría</a>
+                                <a href="#antropometria" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('antropometria')">Antropometría</a>
                             </li>
                             <li class="list__inside">
                                 <a href="#" class="nav__link nav__link--inside" onclick="XHRPOSTGENERAL('inter_alimentos')">Intercambio alimentos</a>
