--- a/dashboard/menu_lateral/antropometria/index.html
+++ b/dashboard/menu_lateral/antropometria/index.html
@@ -15,6 +15,14 @@
                 <label for="dni">Ingresar DNI</label>
                 <input type="number" id="dni" name="dni" class="input">
             </div>
+            <div class="datos__child">
+              <label for="dni">Ingrese Talla</label>
+              <input type="text" id="talla" class="input">
+            </div>
+            <div class="datos__child">
+              <label for="dni">Ingrese Peso</label>
+              <input type="text" id="peso" class="input">
+            </div>
             <div class="datos__child act__fis">
                 <label for="actividad">Actividad física diara</label>
                 <input type="text" id="actividad" name="actividad" class="input">
